Added menu bar, added search, added action creator for search, updated reducer

--- a/client/styles/styles.less
+++ b/client/styles/styles.less
@@ -5,18 +5,24 @@
   height: 300px;
 }
 
-.card img{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    
+.card img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .card-container {
-  display:flex;
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-
 }
+
+#navdiv {
+  padding-bottom: 100px;
+}
+
+// #header-search {
+//   padding-left: 40%;
+// }
