Removed default text in search box

--- a/client/styles/styles.less
+++ b/client/styles/styles.less
@@ -1,41 +1,39 @@
 .card {
-
-  max-width:20vw;
-  height:450px;
-  margin-left:5px;
-  margin-right:5px;
+  max-width: 20vw;
+  height: 450px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
-.card img{
-    // display: block;
-    // margin-left: auto;
-    // margin-right: auto;
-    // width:100px;
-    
+.card img {
+  // display: block;
+  // margin-left: auto;
+  // margin-right: auto;
+  // width:100px;
 }
 
-.card-container {
+#cardsdiv {
   // display:flex;
   // flex-direction: row;
   // flex-wrap: wrap;
   // justify-content: space-evenly;
-
+  margin-left: 7%;
 }
 
-.subtitle{
+.subtitle {
   color: rgb(148, 148, 148);
 }
 
-#loadButton{
-  background-color:rgb(47, 218, 180);
+#loadButton {
+  background-color: rgb(47, 218, 180);
 }
 
 #navdiv {
   padding-bottom: 100px;
 }
 
-#subNav{
-  padding-bottom:200px;
+#subNav {
+  padding-bottom: 200px;
 }
 
 // #header-search {
